// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for reaction Icons should have initial state of false and change when clicked  1`] = `
<Fragment>
  <Icon
    as="i"
    disabled={true}
    fitted={true}
    link={true}
    name="time"
    size="small"
  >
    <span>
      Invalid Date
    </span>
  </Icon>
  <i
    role="presentation"
  >
    <Icon
      as="i"
      disabled={true}
      fitted={true}
      link={true}
      name="thumbs up thumbs up outline"
      size="small"
    />
  </i>
<<<<<<< HEAD
  2
=======
  <span>
    2
  </span>
>>>>>>> demo
  <i
    role="presentation"
  >
    <Icon
      as="i"
      disabled={true}
      fitted={true}
      link={true}
      name="thumbs down thumbs down outline"
      size="small"
    />
  </i>
<<<<<<< HEAD
  1
=======
  <span>
    1
  </span>
>>>>>>> demo
  <i
    className="articleComment"
  >
    <Icon
      as="i"
      disabled={true}
      fitted={true}
      link={true}
      name="comments outline"
      size="small"
    />
    <span>
      23
    </span>
  </i>
</Fragment>
`;

exports[`Test for reaction Icons should have initial state of false and change when clicked  2`] = `
<Fragment>
<<<<<<< HEAD
  <i
    className="dates"
=======
  <Icon
    as="i"
    disabled={true}
    fitted={true}
    link={true}
    name="time"
    size="small"
>>>>>>> demo
  >
    <span>
      Invalid Date
    </span>
  </Icon>
  <i
    role="presentation"
  >
    <Icon
      as="i"
      disabled={true}
      fitted={true}
      link={true}
      name="thumbs up thumbs up outline"
      size="small"
    />
  </i>
<<<<<<< HEAD
  2
=======
  <span>
    2
  </span>
>>>>>>> demo
  <i
    role="presentation"
  >
    <Icon
      as="i"
      disabled={true}
      fitted={true}
      link={true}
      name="thumbs down thumbs down outline"
      size="small"
    />
  </i>
<<<<<<< HEAD
  1
=======
  <span>
    1
  </span>
>>>>>>> demo
  <i
    className="articleComment"
  >
    <Icon
      as="i"
      disabled={true}
      fitted={true}
      link={true}
      name="comments outline"
      size="small"
    />
    <span>
      23
    </span>
  </i>
</Fragment>
`;
